day01-draw-triangle ndk-version;

--- a/day01-draw-triangle/kotlin-version/src/main/res/values/strings.xml
+++ b/day01-draw-triangle/kotlin-version/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">day01-draw-triangle</string>
+    <string name="app_name">day01-draw-triangle.kotlin</string>
 </resources>
